--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "firebase": "^10.12.5",
     "flowbite-react": "^0.10.1",
     "gh-pages": "^6.1.1",
     "react": "^18.3.1",
